fix(footer): set max-width to 1200px, align items center
see #38

--- a/blocks/footer/footer.css
+++ b/blocks/footer/footer.css
@@ -10,6 +10,8 @@ footer {
   flex-direction: column;
   align-items: center;
   justify-content: center;
+  max-width: 1200px;
+  margin: 0 auto;
 }
 
 .footer ul {
@@ -22,6 +24,17 @@ footer {
 
 .footer div {
   padding: 16px;
+  flex: 1;
+}
+
+.footer div:first-of-type {
+  flex: 0;
+  padding-left: 0;
+}
+
+.footer div:last-of-type {
+  flex: 0;
+  padding-right: 0;
 }
 
 .footer div:nth-child(2) :is(ul,p) {
@@ -75,6 +88,7 @@ footer {
 @media (min-width: 768px) {
   .footer div:nth-child(2) ul {
     flex-direction: row;
+    justify-content: center;
   }
 
   .footer div:nth-child(2) ul li:not(:last-of-type)::after {
@@ -89,5 +103,6 @@ footer {
   .footer,
   .footer div:nth-child(2) p {
     flex-direction: row;
+    justify-content: center;
   }
 }
